--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="main">
         <div id="page">
-            <video src="./vid//first.mp4" muted ></video>
+            <video src="./vid/first.mp4" muted ></video>
             <nav>
                 <h3>Vision Pro</h3>
                 <button>Notify me</button>
